[gd_scene load_steps=11 format=3 uid="uid://idaoaa6bj2il"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_tc685"]
[ext_resource type="PackedScene" uid="uid://cjm245dxelqp" path="res://scenes/bg_segment.tscn" id="2_4lsyg"]
[ext_resource type="PackedScene" uid="uid://ddgisqb7cvuci" path="res://scenes/scoreboard.tscn" id="2_55iui"]
[ext_resource type="PackedScene" uid="uid://blxludoul2m7a" path="res://scenes/snake_segment.tscn" id="3_r878p"]
[ext_resource type="PackedScene" uid="uid://dkwnschp1a63a" path="res://scenes/pear_segment.tscn" id="4_atx1i"]
[ext_resource type="PackedScene" uid="uid://dkop5oaadfdyw" path="res://scenes/snake_head_segment.tscn" id="4_csfhm"]
[ext_resource type="PackedScene" uid="uid://bofoxfulw0cgn" path="res://scenes/apple_segment.tscn" id="6_bnbu1"]
[ext_resource type="PackedScene" uid="uid://txfjk8ux6yaj" path="res://scenes/gameover_menu.tscn" id="6_o5kaq"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_21g3r"]
scenes/0/scene = ExtResource("2_4lsyg")
scenes/1/scene = ExtResource("4_csfhm")
scenes/2/scene = ExtResource("3_r878p")
scenes/3/scene = ExtResource("6_bnbu1")
scenes/4/scene = ExtResource("4_atx1i")

[sub_resource type="TileSet" id="TileSet_gvlav"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetScenesCollectionSource_21g3r")

[node name="Main" type="Node2D"]
script = ExtResource("1_tc685")

[node name="Scoreboard" parent="." instance=ExtResource("2_55iui")]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Background" type="TileMap" parent="."]
position = Vector2(0, 50)
tile_set = SubResource("TileSet_gvlav")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65537, 0, 0, 131074, 0, 0, 2, 0, 0, 131072, 0, 0, 196609, 0, 0, 65539, 0, 0, 4, 0, 0, 131076, 0, 0, 196611, 0, 0, 196613, 0, 0, 65541, 0, 0, 6, 0, 0, 131078, 0, 0, 262148, 0, 0, 262146, 0, 0, 262144, 0, 0, 262150, 0, 0, 8, 0, 0, 65545, 0, 0, 65543, 0, 0, 131080, 0, 0, 196615, 0, 0, 262152, 0, 0, 196617, 0, 0, 262145, 0, 0, 196608, 0, 0, 131073, 0, 0, 65536, 0, 0, 1, 0, 0, 65538, 0, 0, 196610, 0, 0, 262147, 0, 0, 131075, 0, 0, 196612, 0, 0, 262149, 0, 0, 131077, 0, 0, 65540, 0, 0, 3, 0, 0, 5, 0, 0, 7, 0, 0, 65542, 0, 0, 131079, 0, 0, 196614, 0, 0, 262151, 0, 0, 196616, 0, 0, 65544, 0, 0, 131081, 0, 0, 262153, 0, 0, 9, 0, 0, 327681, 0, 0, 393216, 0, 0, 393218, 0, 0, 327683, 0, 0, 393220, 0, 0, 327685, 0, 0, 393222, 0, 0, 327687, 0, 0, 393224, 0, 0, 327689, 0, 0, 458753, 0, 0, 524288, 0, 0, 589825, 0, 0, 524290, 0, 0, 458755, 0, 0, 524292, 0, 0, 589827, 0, 0, 589829, 0, 0, 524294, 0, 0, 458757, 0, 0, 458759, 0, 0, 589831, 0, 0, 524296, 0, 0, 458761, 0, 0, 589833, 0, 0, 393217, 0, 0, 327680, 0, 0, 458752, 0, 0, 589824, 0, 0, 524289, 0, 0, 589826, 0, 0, 458754, 0, 0, 524291, 0, 0, 393219, 0, 0, 327682, 0, 0, 327684, 0, 0, 458756, 0, 0, 393221, 0, 0, 589828, 0, 0, 524293, 0, 0, 458758, 0, 0, 327686, 0, 0, 393223, 0, 0, 327688, 0, 0, 393225, 0, 0, 458760, 0, 0, 524295, 0, 0, 524297, 0, 0, 589832, 0, 0, 589830, 0, 0)
layer_1/name = "Snake"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Objects"
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array()

[node name="GameOverMenu" parent="." instance=ExtResource("6_o5kaq")]
process_mode = 2
visible = false

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
